frontend/test/should_pass/basic_013.grg
rule r {
	x : Node;

	modify {
		x --> y : Node;
	}
}

