frontend/test/should_fail/repl_000.grg
rule r {
	a:Node;
	
	modify(b:Node) {
		a-->b;
	}
}